[gd_scene load_steps=5 format=3 uid="uid://bkduc4e82sj1h"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_wm52j"]
[ext_resource type="Texture2D" uid="uid://hqch64n4wcrp" path="res://panel-border-015.png" id="2_b5tek"]

[sub_resource type="LabelSettings" id="LabelSettings_6jgss"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_fqqjf"]
font_size = 30

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_wm52j")

[node name="pauseBG" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.156863, 0.156863, 0.639216)

[node name="Border" type="NinePatchRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = -228.0
offset_right = 181.0
offset_bottom = 223.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_b5tek")
region_rect = Rect2(2.59267, 2.26558, 91.3737, 90.9882)

[node name="Label" type="Label" parent="Border"]
layout_mode = 0
offset_left = 80.0
offset_top = 26.0
offset_right = 256.0
offset_bottom = 95.0
text = "Paused"
label_settings = SubResource("LabelSettings_6jgss")

[node name="Pause Buttons" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -107.0
offset_right = -11.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="pauseButtons" type="VBoxContainer" parent="Pause Buttons"]
layout_mode = 2

[node name="resumeButton" type="Button" parent="Pause Buttons/pauseButtons"]
layout_mode = 2
text = "Resume"

[node name="controlsButton" type="Button" parent="Pause Buttons/pauseButtons"]
layout_mode = 2
text = "Controls
"

[node name="optionsButton" type="Button" parent="Pause Buttons/pauseButtons"]
layout_mode = 2
text = "Options"

[node name="quitButton" type="Button" parent="Pause Buttons/pauseButtons"]
layout_mode = 2
text = "Quit"

[node name="Controls text" type="Label" parent="."]
visible = false
offset_left = 492.0
offset_top = 277.0
offset_right = 792.0
offset_bottom = 678.0
text = "W A S D - Moving
E - Sonar
SPACE - Pick up/drop"
label_settings = SubResource("LabelSettings_fqqjf")

[node name="Back Button" type="Button" parent="Controls text"]
layout_mode = 0
offset_left = 88.0
offset_top = 179.0
offset_right = 193.0
offset_bottom = 228.0
text = "Back"

[connection signal="pressed" from="Pause Buttons/pauseButtons/resumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Pause Buttons/pauseButtons/controlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="Pause Buttons/pauseButtons/quitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Controls text/Back Button" to="." method="_on_back_button_pressed"]
